Add Fancy Pricing

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "npm run serve",
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "test": "vue-cli-service test",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma": "^0.7.1",
     "vue": "^2.5.13",
     "vuex": "^3.0.1"
   },
@@ -21,6 +23,8 @@
     "@vue/test-utils": "^1.0.0-beta.10",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^22.0.4",
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.13"
   },
   "browserslist": [
